--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Facebook Log In or Sign Up</title>
 <link rel="icon" 
       type="image/png" 
-      href="ic.png">
+      href="./img/ic.png">
 <style>
 div.hed
 {
@@ -123,7 +123,7 @@ margin-left:10%;
 </head>
 <body>
 <div class="hed">
-<img src="logo.png" style="padding:5px;" title="Go to Facebook home" height="95">
+<img src="./img/logo.png" style="padding:5px;" title="Go to Facebook home" height="95">
 <div class="othr">
 <table>
 <tr>
@@ -146,7 +146,7 @@ margin-left:10%;
 <div class="bdy1">
 <strong><p style="margin-left:23%; font-family:helvetica; font-size:20px; margin-top:40px;">Facebook helps you connect and share with the<br> people in your life.</p></strong>
 <div>
-<img src="content.png" width="537px" style="margin-left:23%;">
+<img src="./img/content.png" width="537px" style="margin-left:23%;">
 </div>
 </div>
 <div class="bdy2">
@@ -179,7 +179,7 @@ margin-left:10%;
 <td><a href="#" title="Bengali" id="flin">বাংলা</a></td>
 <td><a href="#" title="Gujarati" id="flin">ગુજરાતી</a></td>
 <td><a href="#" title="Punjabi" id="flin">ਪੰਜਾਬੀ</a></td>
-<td><a href="#" title="Show more languages"><img src="icon.png" style="width:20px;"></a></td>
+<td><a href="#" title="Show more languages"><img src="./img/icon.png" style="width:20px;"></a></td>
 </tr>
 </table>
 <div id="line">
@@ -215,7 +215,7 @@ margin-left:10%;
 <tr>
 <td><a href="#" id="flin">Privacy</a></td>
 <td><a href="#" id="flin">Cookies</a></td>
-<td><a href="#" id="flin">AdChoices<img src="arrow.png" style="width:15px; margin-left:0px;"></a></td>
+<td><a href="#" id="flin">AdChoices<img src="./img/arrow.png" style="width:15px; margin-left:0px;"></a></td>
 <td><a href="#" id="flin">Terms</a></td>
 <td><a href="#" id="flin">Help</a></td>
 </tr>
